[gd_scene load_steps=4 format=3 uid="uid://dg0cyfqq0hx38"]

[ext_resource type="Script" path="res://scripts/battle/locations/base/base_location.gd" id="1_of65e"]
[ext_resource type="Script" path="res://scripts/battle/battle/base/battle_camera/battle_camera.gd" id="5_f10ot"]
[ext_resource type="Script" path="res://scripts/extension/containers/monitoring_subviewport_container.gd" id="5_hyyyr"]

[node name="BaseLocation" type="Node2D"]
script = ExtResource("1_of65e")

[node name="BattlefieldVignette" type="Sprite2D" parent="."]
z_index = 100
centered = false

[node name="Battlefield" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
stretch = true
script = ExtResource("5_hyyyr")

[node name="BattlefieldViewport" type="SubViewport" parent="Battlefield"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
gui_snap_controls_to_pixels = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(960, 540)
position_smoothing_enabled = true
editor_draw_limits = true
script = ExtResource("5_f10ot")

[node name="Vignette" type="CanvasLayer" parent="Camera"]
layer = 0

[node name="CameraVignette" type="Sprite2D" parent="Camera/Vignette"]
centered = false

[node name="DarkeningScreen" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.501961)
